--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -253,6 +253,9 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
   	select CPU_FREQ_GOV_SMARTASSH3
   	help
 
+endchoice
+
+
 config CPU_FREQ_DEFAULT_GOV_IMPULSE
 	bool "impulse"
 	select CPU_FREQ_GOV_IMPULSE
@@ -518,6 +521,7 @@ config CPU_FREQ_GOV_SMARTASSH3
   	help
     	'smartassH3' - a "smart" governor
 
+
 config CPU_FREQ_GOV_IMPULSE
 	tristate "'impulse' cpufreq policy governor"
 	help
@@ -525,6 +529,7 @@ config CPU_FREQ_GOV_IMPULSE
 	  designed for latency-sensitive workloads.
 
 	  If in doubt, say N.
+
 
 config GENERIC_CPUFREQ_CPU0
 	tristate "Generic CPU0 cpufreq driver"
