--- a/arch/x86/configs/x86_64_moor_defconfig
+++ b/arch/x86/configs/x86_64_moor_defconfig
@@ -50,7 +50,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="_Ael_Zen_v1"
+CONFIG_LOCALVERSION="_ZenX_v1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
